tests/cases/alloc_certificate/accept/pure_arithmetic.pr
fn inc(x : Int) : Int without alloc = x + 1
