tests/cases/alloc_certificate/reject/fresh_tuple.pr
fn pair(x : Int) : (Int, Int) @ noalloc = (x, x)
